--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,9 @@
-body {
-  margin: 0;
+*{
+  margin:0;
   padding: 0;
-  font-family: sans-serif;
+  box-sizing: border-box;
+}
+a{
+  color:#000;
+  text-decoration: none;
 }
