MODIFIED page Index

--- a/src/pages/Index/App.css
+++ b/src/pages/Index/App.css
@@ -1,24 +1,17 @@
-.App {
-  text-align: center;
+body{
+  background: var(--grey-background);
+}
+main{
+  padding: 25px 100px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+@media screen and (max-width: 992px) {
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
 }
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  
+  /* On screens that are 600px or less, set the background color to olive */
+@media screen and (max-width: 600px) {
+  main{
+    padding: 25px 10px;
+  }
 }
