MODIFIED custom css

--- a/src/components/NavBar__InputSearch/index.css
+++ b/src/components/NavBar__InputSearch/index.css
@@ -1,6 +1,6 @@
 .inputSearch{
     background: #fff;
-    width: 500px;
+    width:auto;
     display: flex;
     justify-content: space-between;
     box-shadow: 1px 1px 5px -1px #656464;
