--- a/src/components/CategoryBlock/index.css
+++ b/src/components/CategoryBlock/index.css
@@ -1,42 +1,67 @@
-.categoryBlock{
-    min-height: 500px;
-  }
-  .categoryBlock__body{
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .categoryBlock__card{
-    background: var(--white);
-    width: auto;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-    border: 1px solid var(--card-division);
-    border-bottom: none;
-    border-right: none;
-    transition: .4s;
-  }
-  .categoryBlock__card:hover{
-    background: var(--blue-primary);
-    border: 1px solid var(--blue-primary);
-    border-right: none;
-  }
-  .categoryBlock__card__icon{}
-  .categoryBlock__card__title{
-    text-align: center;
-  }
-  
-  @media screen and (max-width: 992px) {
+.categoryBlock {
+  min-height: 500px;
+}
 
+.categoryBlock__body {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.categoryBlock__card {
+  background: var(--white);
+  width: 20%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  border: 1px solid var(--card-division);
+  border-bottom: none;
+  border-right: none;
+  transition: .4s;
+}
+
+.categoryBlock__card:hover {
+  background: var(--blue-primary);
+  border: 1px solid var(--blue-primary);
+  border-right: none;
+}
+
+.categoryBlock__card:hover .categoryBlock__icon {
+  color: var(--white);
+}
+
+.categoryBlock__card:hover .categoryBlock__card__title {
+  color: var(--white);
+}
+
+.categoryBlock__card__icon {
+  margin-bottom: 20px;
+}
+
+.categoryBlock__icon {
+  color: var(--blue-primary);
+  font-size: 40px;
+}
+
+.categoryBlock__card__title {
+  text-align: center;
+  font-weight: 100;
+  font-size: 14px;
+  color: var(--discoverText);
+}
+
+@media screen and (max-width: 992px) {
+  .categoryBlock__card {
+    width: calc(100%/3);
+    height: 150px;
   }
-    
-    /* On screens that are 600px or less, set the background color to olive */
-  @media screen and (max-width: 600px) {
-    .categoryBlock__card{
-      width: 50%;
-      height: 150px;
-    }
+}
+
+@media screen and (max-width: 600px) {
+  .categoryBlock__card {
+    width: 50%;
+    height: 150px;
   }
+}
