--- a/src/components/NavBarMobile/index.css
+++ b/src/components/NavBarMobile/index.css
@@ -5,16 +5,14 @@ nav.navMobile{
     margin-bottom: 10px;
 }
 @media screen and (max-width: 992px) {
-
-}
-  
-  /* On screens that are 600px or less, set the background color to olive */
-@media screen and (max-width: 600px) {
     nav.navMobile{
         display: block;
         min-width: 10vw;
+        width: 100%;
         background-color: var(--yellow-primary);
         padding: 0px;
+        position: relative;
+        box-sizing: border-box;
     }
     ul{
         display: flex;
@@ -27,6 +25,73 @@ nav.navMobile{
         align-items: center;
         height: 60px;
     }
+    .navMenu__item{
+        list-style: none;
+        width: auto;
+        margin: 0 10px;
+    }
+    .navMenu__item:nth-last-child(2){
+        width: 50%;
+    }
+   
+    .navMenu__logo{
+        width: 50px;
+    }
+    .navMenu__hamburguer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: auto;
+        height: 50px;
+    }
+   .navMenu__hamburguer__icon{
+    font-size: 25px;
+    color: #2c2c2c;
+   } 
+   
+    .navMenuRow{
+        margin-bottom: 0px;
+    }
+    
+    .navMenu__link{ 
+        color: var(--nav-link);
+        transition: .4s;
+    }
+    
+    .navMenu__link:hover{
+        color:var(--nav-link-hover);
+    }
+    
+    .navMenu__picture{
+        width: 350px;
+    }
+}
+  
+  /* On screens that are 600px or less, set the background color to olive */
+@media screen and (max-width: 600px) {
+    nav.navMobile{
+        display: block;
+        min-width: 10vw;
+        background-color: var(--yellow-primary);
+        padding: 0px;
+        position: relative;
+    }
+    ul{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .navMenuBar{
+        justify-content: space-between;
+        flex-direction: row;
+        align-items: center;
+        height: 60px;
+    }
+    .navMenu__item{
+        list-style: none;
+        width: auto;
+        margin: 0 10px;
+    }
    
     .navMenu__logo{
         width: 50px;
@@ -37,10 +102,11 @@ nav.navMobile{
         align-items: center;
         width: 50px;
         height: 50px;
-        border: 1px solid var(--grey-offer);
-        border-radius: 3px;
     }
-    
+   .navMenu__hamburguer__icon{
+    font-size: 25px;
+    color: #2c2c2c;
+   } 
    
     .navMenuRow{
         margin-bottom: 0px;
