--- a/src/components/PaymentMethodHeader/index.css
+++ b/src/components/PaymentMethodHeader/index.css
@@ -15,18 +15,50 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    margin: 0 5px;
   }
   .paymentMethodsHeader__col.col-1{
     border-left: 3px solid var(--blue-primary);
     flex-direction: column;
   }
+  .paymentMethodsHeader__textPrimary{
+    font-weight: 600;
+    text-transform: capitalize;
+    margin-bottom: 5px;
+  }
+  .paymentMethodsHeader__SubText{
+    color: var(--grey-offer);
+    font-size: 14px;
+    font-weight: 100;
+  }
+  .paymentMethodsHeader__link{
+    color: var(--blue-primary);
+    text-transform: capitalize;
+    font-size: 14px;
+    font-weight: 100;
+  }
+  .paymentMethodsHeader__col.col-1:first-child{
+    padding-left: 20px;
+    align-items: flex-start;
+  }
   .paymentMethodsHeader__options{
     display: flex;
     flex-direction: column;
   }
+  .paymentMethodsHeader__icon{
+    color: var(--blue-primary);
+    border-radius: 50%;
+    border: 1px solid #5e5e5e52;
+    padding: 10px;
+    font-size: 50px;
+    margin-right: 10px;
+  }
   
   @media screen and (max-width: 992px) {
-
+    .paymentMethodsHeader__col:nth-last-child(1),
+    .paymentMethodsHeader__col:nth-last-child(2){
+      display: none;
+    }
   }
     
     /* On screens that are 600px or less, set the background color to olive */
