--- a/src/pages/Index/App.css
+++ b/src/pages/Index/App.css
@@ -1,17 +1,19 @@
 body{
   background: var(--grey-background);
 }
-main{
+.pageHome__main{
   padding: 25px 100px;
 }
 
 @media screen and (max-width: 992px) {
-
+  .pageHome__main{
+    padding: 25px 50px;
+  }
 }
   
   /* On screens that are 600px or less, set the background color to olive */
 @media screen and (max-width: 600px) {
-  main{
+  .pageHome__main{
     padding: 25px 10px;
   }
 }
