--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,6 +38,7 @@ a{
   margin-right: 20px;
   font-weight: 100;
   font-size: 30px;
+  color: var(--discoverText);
 }
 .section__header__viewAll{
   color:#1159C3;
@@ -54,7 +55,7 @@ a{
   /* On screens that are 600px or less, set the background color to olive */
 @media screen and (max-width: 600px) {
   section{
-    border:1px solid var(--grey-offer);
+    border:1px solid#c7c7c78e;
     margin-bottom: 40px;
     border-radius: 3px ;
   }
