--- a/src/pages/BuyForm/index.css
+++ b/src/pages/BuyForm/index.css
@@ -3,10 +3,14 @@
     justify-content: center;
     margin: 20px 0;
     border-radius: 5px;
+    width: 100%;
+}
+.buyConfirmBlock__animated{
+    width: 50%;
 }
 .buyConfirmBlock__left{
     background: #fff;
-    width: 50%;
+    width: auto !important;
     padding: 20px 30px;
 }
 .buyConfirmBlock__right{}
@@ -70,7 +74,14 @@
     flex-direction: column;
 }
 .form__group__card__input{
-    height: 30px;
+    width: 250px;
+    padding: 0 10px;
+    border: 1px solid #e5e5e5;
+    display: block;
+    background: var(--white) !important;
+    outline: none;
+    height: 50px;
+    width: 250px !important;
 }
 
 .form__card__input__block{}
@@ -171,6 +182,9 @@
    
 }
 @media screen and (max-width: 992px) {
+    .buyConfirmBlock__animated{
+        width: 100%;
+    }
     .buyConfirmBlock{
         display: flex;
         justify-content: center;
@@ -366,8 +380,10 @@
     }
 }
   
-  /* On screens that are 600px or less, set the background color to olive */
 @media screen and (max-width: 600px) {
+    .buyConfirmBlock__animated{
+        width: 100%;
+    }
     .buyConfirmBlock{
         display: flex;
         justify-content: center;
