--- a/src/pages/CompletedPurchase/index.css
+++ b/src/pages/CompletedPurchase/index.css
@@ -1,7 +1,7 @@
 .completedPurchaseBlock{
     background: var(--yellow-primary);
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -64,8 +64,8 @@
 
 @media screen and (max-width: 992px) {
     .completedPurchaseBlock__box{
-        width: 95%;
-        height: 95%;
+        min-width: 95%;
+        min-height: 95%;
         padding: 5px;
     }
     .completedPurchaseBlock__box__icon > svg{
@@ -86,8 +86,8 @@
 @media screen and (max-width: 600px) {
     
     .completedPurchaseBlock__box{
-        width: 95%;
-        height: 95%;
+        min-width: 95%;
+        min-height: 95%;
         padding: 5px;
     }
     .completedPurchaseBlock__box__icon > svg{
